# llamaindex_virtual_assistant

./: .gitignore  Dockerfile  README.md  chat_test.py  credentials.env  docker-compose.yml  faiss.sh  ingest.py  ingest_test.py  main.py  query_data.py  requirements.txt  run.sh
chatbot_engine/: Dockerfile  requirements.txt
chatbot_engine/src/: api_config.py  main.py  schemas.py  utils.py
chatbot_engine/src/chains/: assistants.py  custom_chains.py  prompt_templates.py
chatbot_engine/src/exceptions/: base.py  pre_processing.py
chatbot_engine/src/notebooks/: Ragas_with_Langchain.ipynb  test_langchain_chatbots.ipynb
chatbot_engine/src/routes/: __init__.py  data_processing.py  index.py  virtual_assistant.py
data/final_vectorstores/: vectorstore.pkl
data/intermediate_vectorstores/: bitcoin.pkl
data/questions/: bitcoin.csv
frontend/: Dockerfile  pyproject.toml
frontend/streamlit_app/: stream_app.py  utils.py
src/: Makefile  prueba.py
src/api/: api_config.py  callback.py  ingest.py  ingest_test.py  main.py  query_data.py  schemas.py  utils.py
src/api/exceptions/: __init__.py  base.py  pre_processing.py
src/api/responses/: response.py
src/api/routes/: __init__.py  data_preprocessing.py  index.py  vectorstore_processing.py  virtual_assistant.py
src/api/services/: data_preprocessing.py  vectorstore_processing.py
src/data_processing/: data_processing_pipeline.py
src/generators/: __init__.py  generators.py  prompt_templates.py  qa_generators.py
src/loaders/: __init__.py  loaders.py
src/vectorestore/: vectorstore_generators.py
(+4 files in other folders)
