[tool.poetry]
name = "streamlit_app"
version = "0.1.0"
description = ""
authors = ["Luis Fernando González Garay <luis95.garay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.31.1"
websockets = "^12.0"
boto3 = "^1.34.59"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
